Fix contact button margins on mobile (make smaller)

--- a/stylesheets/scss/components/_buttons.scss
+++ b/stylesheets/scss/components/_buttons.scss
@@ -52,7 +52,7 @@
 
     @media (max-width:480px) {
         text-align: center;
-        margin: 0 0 1.5em
+        margin: 0 $global-spacing-unit;
     }
 }
 
